Validate parameters, white list, form

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Cadastro</h1>
-<%= form_for @user do |f| %> <p>
+<%= form_for User.new do |f| %> <p>
   <%= f.label :full_name %> <br />
   <%= f.text_field :full_name %> </p>
   <p>
